--- a/input.scss
+++ b/input.scss
@@ -8,7 +8,8 @@ $orange: #F9CF72;
 $orange-s: #EAAD5D;
 
 body {
-  background: linear-gradient($bgcolor, $orange-s);
+  background: linear-gradient($bgcolor, $blue);
+  background-attachment: fixed;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
@@ -18,6 +19,13 @@ body {
 .container {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  margin: 0 auto;
+
+  @media (min-width: 700px) {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 
@@ -49,7 +57,7 @@ header {
 
     h1:first-child {
       font-family: 'Kaushan Script', cursive;
-      color: $blue;
+      color: $yellow;
     }
 
     h1:nth-child(2) {
@@ -101,7 +109,7 @@ header {
 
   button {
     flex-basis: 85%;
-    background-color: $orange;
+    background-color: $orange-s;
     color: white;
     font-size: 20px;
     border: none;
@@ -119,9 +127,11 @@ header {
 main {
   display: flex;
   flex-direction: column;
+  order: 2;
 
   @media (min-width: 500px) {
     flex-direction: row;
+    margin-top: 50px;
   }
 
   .hero-image {
@@ -129,16 +139,16 @@ main {
     background-size: cover;
     background-position: 50% 75%;
     flex-basis: 100%;
-    height: 40vh;
 
     @media (min-width: 500) {
     flex-basis: 50%;
-    height: auto;
+    margin: auto 0;
+    background-position:top;
+
     }
   }
 
   .hero-ad {
-    background: url("img/hero-ad.jpeg");
     text-align: center;
     color: white;
     padding: 10px;
@@ -162,5 +172,61 @@ main {
       background-color: rgba(0, 0, 0, 0.6)
     }
   }
+}
 
+.tours {
+  order: 1;
+  color: white;
+  flex-basis: 100%;
+
+  .tour-1, .tour-2, .tour-3 {
+    background-size: cover;
+    padding: 20px 0px 30px 0px;
+  }
+
+  .tour-1 {
+    background-image: url("img/img1.jpeg");
+  }
+
+  .tour-2 {
+    background-image: url("img/img2.jpeg");
+  }
+
+  .tour-3 {
+    background-image: url("img/img3.jpg");
+  }
+
+  h3 {
+    color: $orange-s;
+    text-align: right;
+    padding: 10px;
+  }
+
+  h2 {
+    font-family: 'Kaushan Script', cursive;
+    background-color: rgba(0,0,0, 0.4);
+  }
+
+  p {
+    padding: 5px;
+    background-color: rgba(0,0,0, 0.65);
+    width: 100%;
+
+    @media (min-width: 500px) {
+      width: 50%;
+    }
+
+    @media (min-width: 700px) {
+      width: 35%;
+    }
+  }
+
+}
+
+.our-guided {
+  order: 3;
+}
+
+footer {
+  order: 4;
 }
