--- a/output.css
+++ b/output.css
@@ -1,5 +1,6 @@
 body {
-  background: linear-gradient(#335875, #EAAD5D);
+  background: linear-gradient(#335875, #49BDDD);
+  background-attachment: fixed;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
@@ -7,7 +8,13 @@ body {
 
 .container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  width: 100%;
+  margin: 0 auto; }
+  @media (min-width: 700px) {
+    .container {
+      width: 80%;
+      margin: 0 auto; } }
 
 header {
   display: flex;
@@ -29,7 +36,7 @@ header {
         justify-content: flex-start; } }
     header .logo h1:first-child {
       font-family: 'Kaushan Script', cursive;
-      color: #49BDDD; }
+      color: #F9E686; }
     header .logo h1:nth-child(2) {
       color: white; }
   header nav {
@@ -64,7 +71,7 @@ header {
         display: inline-block; } }
   header button {
     flex-basis: 85%;
-    background-color: #F9CF72;
+    background-color: #EAAD5D;
     color: white;
     font-size: 20px;
     border: none;
@@ -76,22 +83,23 @@ header {
 
 main {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  order: 2; }
   @media (min-width: 500px) {
     main {
-      flex-direction: row; } }
+      flex-direction: row;
+      margin-top: 50px; } }
   main .hero-image {
     background: url("img/hero-pic.jpeg");
     background-size: cover;
     background-position: 50% 75%;
-    flex-basis: 100%;
-    height: 40vh; }
+    flex-basis: 100%; }
     @media (min-width: 500) {
       main .hero-image {
         flex-basis: 50%;
-        height: auto; } }
+        margin: auto 0;
+        background-position: top; } }
   main .hero-ad {
-    background: url("img/hero-ad.jpeg");
     text-align: center;
     color: white;
     padding: 10px;
@@ -107,5 +115,42 @@ main {
     main .hero-ad p {
       font-size: 20px;
       background-color: rgba(0, 0, 0, 0.6); }
+
+.tours {
+  order: 1;
+  color: white;
+  flex-basis: 100%; }
+  .tours .tour-1, .tours .tour-2, .tours .tour-3 {
+    background-size: cover;
+    padding: 20px 0px 30px 0px; }
+  .tours .tour-1 {
+    background-image: url("img/img1.jpeg"); }
+  .tours .tour-2 {
+    background-image: url("img/img2.jpeg"); }
+  .tours .tour-3 {
+    background-image: url("img/img3.jpg"); }
+  .tours h3 {
+    color: #EAAD5D;
+    text-align: right;
+    padding: 10px; }
+  .tours h2 {
+    font-family: 'Kaushan Script', cursive;
+    background-color: rgba(0, 0, 0, 0.4); }
+  .tours p {
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.65);
+    width: 100%; }
+    @media (min-width: 500px) {
+      .tours p {
+        width: 50%; } }
+    @media (min-width: 700px) {
+      .tours p {
+        width: 35%; } }
+
+.our-guided {
+  order: 3; }
+
+footer {
+  order: 4; }
 
 /*# sourceMappingURL=output.css.map */
